--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Clicker</title>
+    <title>Pizza Clicker</title>
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-    <section class="resources">
+    <section class="pizza__section">
 
-        <div class="resource__row">
-            <button id="generate-food">Harvest</button><span>Food: <span id="resource__food">0</span></p>
+        <div class="pizza__row">
+            <button id="pizza">Cook Pizza</button><span>Pizzas: <span id="pizza__count">0</span></p>
         </div>
 
     </section>
     
     <script src="js/custom.js"></script>
-    test
+
 </body>
 </html>
