--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="pizza__section">
 
         <div class="pizza__row">
-            <button id="pizza">Cook Pizza</button><span>Pizzas: <span id="pizza__count">0</span></p>
+            <button id="pizza__button">Cook Pizza</button><span>Pizzas: <span id="pizza__count">0</span></p>
         </div>
 
     </section>
