--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pizza Clicker</title>
+    <title>Empire Clicker</title>
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-    <section class="pizza__section">
+    <section class="resource__section">
 
-        <div class="pizza__row">
-            <button id="pizza__button">Cook Pizza</button><span>Pizzas: <span id="pizza__count">0</span></p>
+        <div class="food__row">
+            <button id="food__button">Gather food</button><span>Food: <span id="food__count">0</span></p>
+        </div>
+        <div class="wood__row">
+            <button id="wood__button">Gather wood</button><span>Wood: <span id="wood__count">0</span></p>
         </div>
 
         
