--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         
 
     </section>
+    <button type="button" id="management__reset">Reset</button>
     
     <script src="js/custom.js"></script>
 
