--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <section class="resource__section">
 
         <div class="food__row">
-            <button id="food__button">Gather food</button><span>Food: <span id="food__count">0</span></p>
+            <button id="food__button">Gather food</button><span>Food: <span id="food__count">0</span>
         </div>
         <div class="wood__row">
-            <button id="wood__button">Gather wood</button><span>Wood: <span id="wood__count">0</span></p>
+            <button id="wood__button">Gather wood</button><span>Wood: <span id="wood__count">0</span>
+        </div>
+        <div class="stone__row">
+            <button id="stone__button">Gather stone</button><span>Stone: <span id="stone__count">0</span>
         </div>
 
         
