--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-    <section class="resource__section">
+    <section id="resource__section" class="panel">
 
         <div class="food__row">
             <button id="food__button">Gather food</button><span>Food: <span id="food__count">0</span>
@@ -22,6 +22,11 @@
 
         
 
+    </section>
+
+    <section id="upgrade_section" class="panel">
+        <button id="doubleclick--food" class="upgrade__button">Double Food Per Click</button>
+        <button id="doubleclick--wood" class="upgrade__button">Double wood Per Click</button>
     </section>
     <button type="button" id="management__reset">Reset</button>
     
