JSON Storage logic Added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         <button id="doubleclick--food" class="upgrade__button">Double Food Per Click</button>
         <button id="doubleclick--wood" class="upgrade__button">Double wood Per Click</button>
     </section>
-    <button type="button" id="management__reset">Reset</button>
+
+    <section id="system__section">
+        <button type="button" id="management__reset">Reset</button>
+
+    </section>
     
     <script src="js/custom.js"></script>
 
