Storing and loading upgrades
Values display correctly and buttons are disabled when the upgrade is in effect

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <section id="upgrade_section" class="panel">
         <button id="doubleclick--food" class="upgrade__button">Double Food Per Click</button>
         <button id="doubleclick--wood" class="upgrade__button">Double wood Per Click</button>
+        <button id="doubleclick--stone" class="upgrade__button">Double stone Per Click</button>
     </section>
 
     <section id="system__section">
