Upgrades have cost: fixes #29 and fixes #15

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </section>
 
     <section id="upgrade_section" class="panel">
-        <button id="doubleclick--food" class="upgrade__button">Double Food Per Click</button>
-        <button id="doubleclick--wood" class="upgrade__button">Double wood Per Click</button>
-        <button id="doubleclick--stone" class="upgrade__button">Double stone Per Click</button>
+        <button id="doubleclick--food" class="upgrade__button">Double Food Per Click<br>(100) Food</button>
+        <button id="doubleclick--wood" class="upgrade__button">Double wood Per Click<br>(100) Wood</button>
+        <button id="doubleclick--stone" class="upgrade__button">Double stone Per Click<br>(100) Stone</button>
     </section>
 
     <section id="worker_section">
