Basic display is working

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
-    <section id="resource__section" class="panel">
+    <section id="resource_section" class="panel">
 
         <div class="resource__row">
             <button id="food__button">Gather food</button><span>Food: <span id="food__count">0</span>
@@ -44,8 +44,12 @@
         </div>
     </section>
     
-    <section id="system__section">
+    <section id="system_section">
         <button type="button" id="management__reset">Reset</button>
+
+    </section>
+
+    <section id="pu_section">
 
     </section>
     
