Added Empire and Emperor name fixes #28

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
+    <header>
+        <h1 id="empire">The Empire of <span id="title__name"></span></h1>
+        <h2 id="emperor">Run by the emperor <span id="emperor__name"></span></h2>
+    </header>
+
     <section id="resource_section" class="panel">
 
         <div class="resource__row">
@@ -46,9 +51,10 @@
     
     <section id="system_section">
         <button type="button" id="management__reset">Reset</button>
-
+        <button type="button" id="management__rename">Rename</button>
     </section>
 
+    <!-- PURCHASED UPGRADES SECTION -->
     <section id="pu_section">
 
     </section>
