Added classes and basic property label formatting

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <section id="resource_section" class="game__panel">
             <h1 id="resource__heading">Resources</h1>
 
-            <div class="resource__row">
-                <button id="food__button">Gather food</button><span>Food: <span id="food__count">0</span>
+            <div class="property__row">
+                <button id="food__button">Gather food</button><span class="property__display">Food: <span id="food__count">0</span></span>
             </div>
-            <div class="resource__row">
-                <button id="wood__button">Gather wood</button><span>Wood: <span id="wood__count">0</span>
+            <div class="property__row">
+                <button id="wood__button">Gather wood</button><span class="property__display">Wood: <span id="wood__count">0</span></span>
             </div>
-            <div class="resource__row">
-                <button id="stone__button">Gather stone</button><span>Stone: <span id="stone__count">0</span>
+            <div class="property__row">
+                <button id="stone__button">Gather stone</button><span class="property__display">Stone: <span id="stone__count">0</span></span>
             </div>
 
         </section>
@@ -44,18 +44,18 @@
         <section id="worker_section" class="game__panel">
             <h1 id="worker__heading">Workers</h1>
 
-            <div class="worker_row">
-                <button id="worker__new" class="worker__button">Add worker</button><span>Workers: <span id="worker__count">0</span>
+            <div class="property__row">
+                <button id="worker__new" class="worker__button">Add worker</button><span class="property__display">Workers: <span id="worker__count">0</span>
             </div>
-            <div class="worker__row">
-                <button id="worker__farmer" class="worker__button">Add farmer</button><span>Farmers: <span id="farmer__count">0</span>
+            <div class="property__row">
+                <button id="worker__farmer" class="worker__button">Add farmer</button><span class="property__display">Farmers: <span id="farmer__count">0</span>
             </div>
-            <div class="worker__row">
-                <button id="worker__lumberjack" class="worker__button">Add lumberjack</button><span>Lumberjacks: <span id="lumberjack__count">0</span>
+            <div class="property__row">
+                <button id="worker__lumberjack" class="worker__button">Add lumberjack</button><span class="property__display">Lumberjacks: <span id="lumberjack__count">0</span>
 
             </div>
-            <div class="worker__row">
-                <button id="worker__miner" class="worker__button">Add miner</button><span>Food: <span id="miner__count">0</span>
+            <div class="property__row">
+                <button id="worker__miner" class="worker__button">Add miner</button><span class="property__display">Food: <span id="miner__count">0</span>
             </div>
         </section>
         
