Increments and their colours are added, font loads right fixes #47 and #46

--- a/index.html
+++ b/index.html
@@ -21,13 +21,25 @@
             <h1 id="resource__heading">Resources</h1>
 
             <div class="property__row">
-                <button id="food__button">Gather food</button><span class="property__display">Food: <span id="food__count">0</span></span>
+                <button id="food__button">Gather food</button>
+                <span class="property__display">Food: 
+                    <span id="food__count">0</span>
+                    <span id="food__increment" class="property__increment"></span>/s
+                </span>
             </div>
             <div class="property__row">
-                <button id="wood__button">Gather wood</button><span class="property__display">Wood: <span id="wood__count">0</span></span>
+                <button id="wood__button">Gather wood</button>
+                <span class="property__display">Wood: 
+                    <span id="wood__count">0</span>
+                    <span id="wood__increment" class="property__increment"></span>/s
+                </span>
             </div>
             <div class="property__row">
-                <button id="stone__button">Gather stone</button><span class="property__display">Stone: <span id="stone__count">0</span></span>
+                <button id="stone__button">Gather stone</button>
+                <span class="property__display">Stone: 
+                    <span id="stone__count">0</span>
+                    <span id="stone__increment" class="property__increment"></span>/s
+                </span>
             </div>
 
         </section>
