Building totals are displaying

--- a/index.html
+++ b/index.html
@@ -43,6 +43,22 @@
             </div>
 
         </section>
+        
+        <section id="buildings_section" class="game__panel">
+            <h1 id="buildings_heading">Buildings</h1>
+            <div class="property__row">
+                <button id="build_barn">Build Barn</button>
+                <span class="property__display">Barns: <span id="barn__count"></span></span>
+            </div>
+            <div class="property__row">
+                <button id="build_lumberyard">Build Lumberyard</button>
+                <span class="property__display">Lumberyards: <span id="lumberyard__count"></span></span>
+            </div>
+            <div class="property__row">
+                <button id="build_stoneyard">Build Stoneyard</button>
+                <span class="property__display">Stoneyards: <span id="stoneyard__count"></span></span>
+            </div>
+        </section>
 
         <section id="upgrade_section" class="game__panel">
             <h1 id="upgrades_heading">Upgrades</h1>
@@ -57,13 +73,16 @@
             <h1 id="worker__heading">Workers</h1>
 
             <div class="property__row">
-                <button id="worker__new" class="worker__button">Add worker</button><span class="property__display">Workers: <span id="worker__count">0</span>
+                <button id="worker__new" class="worker__button">Add worker</button>
+                <span class="property__display">Workers: <span id="worker__count">0</span></span>
             </div>
             <div class="property__row">
-                <button id="worker__farmer" class="worker__button">Add farmer</button><span class="property__display">Farmers: <span id="farmer__count">0</span>
+                <button id="worker__farmer" class="worker__button">Add farmer</button>
+                <span class="property__display">Farmers: <span id="farmer__count">0</span></span>
             </div>
             <div class="property__row">
-                <button id="worker__lumberjack" class="worker__button">Add lumberjack</button><span class="property__display">Lumberjacks: <span id="lumberjack__count">0</span>
+                <button id="worker__lumberjack" class="worker__button">Add lumberjack</button>
+                <span class="property__display">Lumberjacks: <span id="lumberjack__count">0</span></span>
 
             </div>
             <div class="property__row">
