--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Empire Clicker</title>
 
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/darkmode.css">
     
 </head>
 <body>
@@ -93,8 +94,9 @@
         <section id="system_section" class="game__panel">
             <h1 id="system__heading">Game Management</h1>
 
-            <button type="button" id="management__reset">Reset</button>
-            <button type="button" id="management__rename">Rename</button>
+            <button type="button" id="reset_game">Reset</button>
+            <button type="button" id="reset_name">Rename</button>
+            <button type="button" id="toggle_darkmode">Darkmode: <span id="darmode_state">off</span></button>
         </section>
 
         <!-- PURCHASED UPGRADES SECTION -->
