--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 
                 </div>
                 <div class="property__row">
-                    <button id="worker__miner" class="worker__button">Add miner</button><span class="property__display">Food: <span id="miner__count">0</span>
+                    <button id="worker__miner" class="worker__button">Add miner</button>
+                    <span class="property__display">Miners: <span id="miner__count">0</span>
                 </div>
             </section>
             
