--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                         <button id="build_stoneyard">Build Stoneyard</button>
                         <span class="property__display">Stoneyards: <span id="stoneyard__count"></span></span>
                     </div>
+                    <div class="property__row">
+                        <button id="build_woodhovel">Build Wood Hovel</button>
+                        <span class="property__display">Wood Hovels: <span id="woodhovel__count"></span></span>
+                    </div>
+
                 </section>
 
                 <section id="upgrade_section" class="game__panel">
