Added displays and colour
Displays added for total population and housing
Code updates this display every tick
Colours added for approaching and hitting the limit

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
                         </span>
                     </div>
 
+                    <div class="property__row">
+                        <p>Population: <span id="population_total_display">0</span> / <span id="housing_total_display">0</span></p>
+                    </div>
+
                 </section>
                 
                 <section id="buildings_section" class="game__panel">
